@@ -149,7 +149,7 @@ public class Board {
 	}
 
 	public void awardWinner(Game game, String id) {
-		List<Player> losers = players.stream().filter(p -> !p.getId().equals(id)).collect(Collectors.toList());
+		List<Player> losers = players.stream().filter(p -> !p.getId().equals(id)).toList();
 
 		Account wacc = AccountDAO.getAccount(id);
 		wacc.addCredit(
@@ -169,7 +169,7 @@ public class Board {
 	}
 
 	public void awardWinners(Game game, String... ids) {
-		List<Player> losers = players.stream().filter(p -> ArrayUtils.contains(ids, p.getId())).collect(Collectors.toList());
+		List<Player> losers = players.stream().filter(p -> ArrayUtils.contains(ids, p.getId())).toList();
 
 		for (String id : ids) {
 			Account wacc = AccountDAO.getAccount(id);
@@ -191,7 +191,7 @@ public class Board {
 	}
 
 	public void awardWinner(GlobalGame game, String id) {
-		List<Player> losers = players.stream().filter(p -> !p.getId().equals(id)).collect(Collectors.toList());
+		List<Player> losers = players.stream().filter(p -> !p.getId().equals(id)).toList();
 
 		Account wacc = AccountDAO.getAccount(id);
 		wacc.addCredit(
@@ -211,7 +211,7 @@ public class Board {
 	}
 
 	public void awardWinners(GlobalGame game, String... ids) {
-		List<Player> losers = players.stream().filter(p -> ArrayUtils.contains(ids, p.getId())).collect(Collectors.toList());
+		List<Player> losers = players.stream().filter(p -> ArrayUtils.contains(ids, p.getId())).toList();
 
 		for (String id : ids) {
 			Account wacc = AccountDAO.getAccount(id);
