@@ -115,7 +115,7 @@ public class Member implements Hashable {
 	public synchronized boolean addXp(Guild g, double buff) {
 		AtomicReference<Double> mult = new AtomicReference<>(buff);
 
-		boolean waifu = g.getMembers().stream().map(net.dv8tion.jda.api.entities.Member::getId).collect(Collectors.toList()).contains(com.kuuhaku.model.persistent.Member.getWaifu(uid));
+		boolean waifu = g.getMembers().stream().map(net.dv8tion.jda.api.entities.Member::getId).toList().contains(com.kuuhaku.model.persistent.Member.getWaifu(uid));
 		if (waifu)
 			mult.updateAndGet(v -> v * WaifuDAO.getMultiplier(uid).getMult());
 
